# voice_pack_dreame

./: .gitignore  README.md  pyproject.toml  sound_list.csv
glados_cli/: main.py  make_release.py
