[tool.poetry]
name = "glados_cli"
version = "0.1.0"
description = "Batch downloader & converter for GLaDOS Valetudo sound files"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
glados-audio = "glados_cli.main:main"
make-release = "glados_cli.make_release:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"